nullaway_error_8EA3917A-D80B-4EE4-B6FE-3F0FC49F3AC5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/view/RedirectView.java:331: error: [NullAway] dereferenced expression getUrl() is @Nullable
		if (this.contextRelative && getUrl().startsWith("/")) {
		                                    ^
    (see http://t.uber.com/nullaway )
